// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <VitalsInput /> should renders with all props correctly 1`] = `
<div
  className="vitals-group highlighter-wrapper"
>
  <span
    className="undefined"
  />
  <label
    className="vitals-label"
  >
    Test label
  </label>
  <VitalsPopover
    detailValue="12.0"
    disabled={false}
    error={false}
    id="test-id"
    input={
      Object {
        "name": "respirationRate",
        "value": "",
      }
    }
    isNotValidate={false}
    placeholder="Test placeholder"
    popoverLabels={Array []}
    showError={false}
    title="Test label"
    vitalStatusesType="success"
  />
</div>
`;

exports[`Component <VitalsInput /> should renders with all props correctly testing without popover 1`] = `
<div
  className="vitals-group highlighter-wrapper"
>
  <span
    className="undefined"
  />
  <label
    className="vitals-label"
  >
    Test label
  </label>
  <div
    className="input-holder vitals-holder success"
  >
    <input
      className="form-control input-sm"
      disabled={false}
      id="test-id"
      name="respirationRate"
      placeholder="Test placeholder"
      value=""
    />
  </div>
</div>
`;

exports[`Component <VitalsInput /> should renders with all props correctly when not showError 1`] = `
<div
  className="vitals-group highlighter-wrapper has-success"
>
  <span
    className="undefined"
  />
  <label
    className="vitals-label"
  >
    Test label
  </label>
  <VitalsPopover
    detailValue="12.0"
    disabled={false}
    id="test-id"
    input={
      Object {
        "name": "respirationRate",
        "value": "",
      }
    }
    isNotValidate={false}
    placeholder="Test placeholder"
    popoverLabels={
      Array [
        Object {
          "place": 1,
          "text": "≤ 8",
        },
        Object {
          "place": 3,
          "text": "9-11",
        },
      ]
    }
    title="Test label"
    vitalStatusesType=""
  />
</div>
`;

exports[`Component <VitalsInput /> should renders with all props correctly when showError 1`] = `
<div
  className="vitals-group highlighter-wrapper has-error"
>
  <span
    className="undefined"
  />
  <label
    className="vitals-label"
  >
    Test label
  </label>
  <VitalsPopover
    detailValue="12.0"
    disabled={false}
    error={true}
    id="test-id"
    input={
      Object {
        "name": "respirationRate",
        "value": "",
      }
    }
    isNotValidate={false}
    placeholder="Test placeholder"
    popoverLabels={
      Array [
        Object {
          "place": 1,
          "text": "≤ 8",
        },
        Object {
          "place": 3,
          "text": "9-11",
        },
      ]
    }
    showError={true}
    title="Test label"
    vitalStatusesType=""
  />
</div>
`;
